--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>javafx-web</artifactId>
             <version>17.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.sociaal</groupId>
+            <artifactId>freetts</artifactId>
+            <version>1.2.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
